# todo-web

./: LICENSE  README.md  compose.yaml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.devcontainer/fullstack/: devcontainer.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20260203112836_create_users.sql  20260203113538_create_refresh_tokens.sql  20260211023546_create_todos.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/handlers/: auth.rs  mod.rs  todo.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: auth.rs  mod.rs  todo.rs  token.rs  user.rs
backend/src/repositories/: mod.rs  todo_repository.rs  token_repository.rs  user_repository.rs
backend/src/routes/: mod.rs
backend/src/services/: auth_service.rs  mod.rs  todo_service.rs
backend/tests/: auth_api_test.rs  todo_api_test.rs
backend/tests/helper/: mod.rs
frontend/: .env.example  .gitignore  Dockerfile  global.d.ts  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.ts  vitest.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx  ToastViewport.tsx  TodoDeleteDialog.tsx  TodoFilters.tsx  TodoFormDialog.tsx  TodoItem.tsx
frontend/src/constants/: api-uri.ts  message.ts
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/lib/: api-client.ts
frontend/src/schemas/: auth.ts  todo.ts
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/types/: auth.ts  toast.ts  (+1 more)
(+8 files in other folders)
